assets/css/dashboard-css-2024.css
/* ... */
.dark-mode .mail-logo-content {
    opacity: .3 !important;
}

.dark-mode .caliweb-email-header {
    background-color: rgba(22, 22, 23, 0.8) !important;
}

.dark-mode .modal-content {
    background-color: #1b1b1b;
    border: 1px solid #222;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.dark-mode .fillable-header {
    background-color: #333 !important;
}

.dark-mode .sidebar-link,
.dark-mode .account-settings-sidebar-link,
.dark-mode .drop-menu-item-sidebar {
    border: 1px solid #141414;
    background-color: #141414;
    border-radius: 6px;
}

.dark-mode .sidebar-link:hover,
.dark-mode .account-settings-sidebar-link:hover,
.dark-mode .drop-menu-item-sidebar:hover {
    background-color: #0a0a0a;
    border: 1px solid #222;
}

.dark-mode .sidebar-link.active,
.dark-mode .account-settings-sidebar-link.active,
.dark-mode .drop-menu-item-sidebar.active,
.dark-mode .drop-menu-item-sidebar.active {
    background-color: #0a0a0a;
    border: 1px solid #a4d3ff;
}

.dark-mode .horizantal-line {
    height: 1px;
    width: 100%;
    background-color: #333;
}

.dark-mode .note-card {
    margin-bottom: 15px;
}

.dark-mode .toggle-container {
    text-decoration: none;
    color: #DBDBDB;
}

.dark-mode .toggle-container:hover {
    text-decoration: none;
    color: #DBDBDB;
}

.dark-mode .caliweb-card.dashboard-card.account-center-cards {
    padding: 4% !important;
    box-shadow: rgba(37, 37, 37, 0.2) 0px 2px 8px 0px;
    background-color: #222222;
    border:1px solid #333;
}

.dark-mode .drop-menu-item-sidebar,
.dark-mode .sidebar-link-a .drop-menu-item-sidebar,
.dark-mode .sidebar-link-a {
    color:#dbdbdb !important;
}

.dark-mode .with-border-special {
    border:1px solid #222;
}

.dark-mode .caliweb-web-manage-btn {
    border: 1px solid #303030;
    background-color: #303030;
    padding: 20px;
    border-radius: 10px;
    transition: all 0.3s ease-in-out;
    backdrop-filter: blur(5px);
}

.dark-mode .caliweb-web-manage-btn:hover {
    border: 1px solid #676cff;
    background-color: #0e0e0e;
    box-shadow: none;
    backdrop-filter: blur(5px);
}

.dark-mode .dropdown {
    background-color: #000;
    border: 1px solid #111;
}

.dark-mode .dropdown .nav-links:hover {
    border: 1px solid #333 !important;
}

.dark-mode .dashboard-system-status:hover {
    background-color: #212121;
}

.dark-mode .dark-mode-white {
    color: #dbdbdb !important;
}

.dark-mode .dark-mode-white:hover {
    color: #fff !important;
}

.dark-mode .caliweb-error-box,
.dark-mode .caliweb-error-box p,
.dark-mode .caliweb-error-box h3 {
    color: black !important;
}

.dark-mode .profileImage {
    border: 1px solid #222 !important;
}

.dark-mode .profile-block:hover {
    background-color: #232323;
}

.dark-mode .border-top-grey-300 {
    border-top: 1px solid #222 !important;
}

.dark-mode .background-darker-300 {
    background-color: #0a0a0a !important;
}

.dark-mode .caliweb-button.primary {
    color: #000 !important;
    background-color: #9dd0ff !important;
}

.dark-mode .caliweb-button.primary:hover {
    color: #000 !important;
    background-color: #79bbfa !important;
}

.dark-mode .nav-links.active {
    background-color: #9dd0ff;
    color: #000 !important;
}

.dark-mode .nav-links-clickable.active {
    color: #000 !important;
}

.dark-mode .nav-links.active:hover,
.dark-mode .nav-links-clickable.active:hover {
    color: #000 !important;
}

.dark-mode .filter-white-on-dark {
    filter: invert(1) !important;
}

.dark-mode .log-entry {
    border-bottom: 1px solid #444;
}

.dark-mode .settings-header,
.dark-mode .card-header-services {
    background-color: #222 !important;
}

/* =================== Nexure Dashboard Grid Styles =================== */

.special-caliweb-spacing {
    grid-row-gap: 10px !important;
    grid-column-gap: 10px !important;
}

.customer-grid-quick-actions {
    grid-row-gap: 40px !important;
    grid-column-gap: 40px !important;
}

.account-grid-modified {
    -ms-grid-columns: 1.5fr .5fr;
    grid-template-columns: 1.5fr .5fr;
}

.profile-grid-modified {
    -ms-grid-columns: .5fr 1fr .5fr;
    grid-template-columns: .5fr 1fr .5fr;
}

.email-grid {
    -ms-grid-columns: .5fr 1.5fr;
    grid-template-columns: .5fr 1.5fr;
}

/* =================== Nexure Dashboard Section Styles =================== */

.section {
    padding-top: 20px;
    padding-bottom: 20px;
}

/* =================== Nexure Dashboard Three Card Styles =================== */

.caliweb-card.dashboard-card {
    background: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 6px;
    padding: 20px;
}

.caliweb-card.dashboard-card-shrink {
    background: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 6px;
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
}

.note-card {
    margin-bottom: 15px;
}

.card-header {
    padding-top: 0px;
    padding-bottom: 10px;
    margin-bottom: 4%;
}

.card-header-account {
    background-color: #f1f1f1;
    padding: 10px;
    padding-left:20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: 1px solid #eee;
    margin-bottom: 2.5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.card-header-services {
    background-color: #f1f1f1;
    padding: 20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: 1px solid #eee;
    margin-bottom: 2.5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
/* ... */

